[package]
name = "coord_2d"
description = "A general purpose 2d coordinate"
version = "0.2.11"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/coord-2d.git"
repository = "https://github.com/stevebob/coord-2d.git"
documentation = "https://docs.rs/coord_2d"

[features]
serialize = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }
